# rustdesk-server-demo

./: Cargo.toml  db_v2.sqlite3  id_ed25519  id_ed25519.pub  test.sqlite3
libs/hbb_common/: Cargo.toml  build.rs
libs/hbb_common/protos/: message.proto  rendezvous.proto
libs/hbb_common/src/: compress.rs  config.rs  fs.rs  handle_request.rs  keyboard.rs  lib.rs  tcp.rs  udp.rs
src/: common.rs  database.rs  datatime_util.rs  lib.rs  main.rs  peer.rs  server.rs  sync_db.rs  version.rs
