[package]
name = "rustdesk-server"
version = "1.0.0"
authors = ["rustdesk <info@rustdesk.com>"]
edition = "2018"
description = "A remote control software."

[dependencies]
# tokio = { version = "1.41.0", features = ["full"] }
phf = "0.11.2"
hbb_common = { path = "libs/hbb_common" }
tokio-tungstenite = "0.24.0"
serde_derive = "1.0.214"
serde = "1.0.214"
serde_json = "1.0.132"
lazy_static = "1.4"
clap = "4.5.20"
rust-ini = "0.21.1"
sodiumoxide = "0.2.6"
base64 = "0.22.1"
deadpool = "0.12.1"
deadpool-sqlite = "0.9.0"
deadpool-sync = "0.1.4"
uuid = { version = "1.11.0", features = ["v4"] }

sqlx = { version = "0.8.2", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono", "json" ] }
async-trait = "0.1.83"
flexi_logger = { version = "0.29.5", features = ["async", "specfile", "compress", "specfile_without_notification", "dont_minimize_extra_stacks"] }

local-ip-address = "0.6.3"
ipnetwork = "0.20.0"