[package]
name = "hbb_common"
version = "0.1.0"
authors = ["rustdesk<info@rustdesk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "3.6.0" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
futures = "0.3"
bytes = "1.7.2"
log = "0.4"
env_logger = "0.11.5"
socket2 = { version = "0.5.7", features = ["all"] }
zstd = "0.13.2"
quinn = {version = "0.11.5", optional = true }
anyhow = "1.0"
futures-util = "0.3"
directories-next = "2.0"
rand = "0.8.5"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "1.4"
confy = { git = "https://github.com/open-trade/confy" }
dirs-next = "2.0"
filetime = "0.2"
sodiumoxide = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
mac_address = "1.1"

[features]
quic = ["quinn"]

[build-dependencies]
protobuf-codegen = { version = "3.6.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dev-dependencies]
toml = "0.8.19"
serde_json = "1.0"
